// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistryExtensionOverviewPage renders 1`] = `
<div
  className="registry-extension-overview-page d-flex flex-wrap"
>
  <div
    className="registry-extension-overview-page__readme mr-3"
  >
    <div
      className="markdown"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p><strong>A</strong></p>
",
        }
      }
      onClick={[Function]}
    />
  </div>
  <aside
    className="registry-extension-overview-page__sidebar"
  >
    <div
      className="mb-3"
    >
      <h3>
        Categories
      </h3>
      <ul
        className="list-inline test-registry-extension-categories"
      >
        <li
          className="list-inline-item mb-2"
        >
          <a
            className="btn btn-outline-secondary btn-sm"
            href="/extensions?query=category%3A%22Programming+languages%22"
            onClick={[Function]}
          >
            Programming languages
          </a>
        </li>
        <li
          className="list-inline-item mb-2"
        >
          <a
            className="btn btn-outline-secondary btn-sm"
            href="/extensions?query=category%3AOther"
            onClick={[Function]}
          >
            Other
          </a>
        </li>
      </ul>
    </div>
    <div
      className="mb-3"
    >
      <h3>
        Tags
      </h3>
      <ul
        className="list-inline"
      >
        <li
          className="list-inline-item mb-2"
        >
          <a
            className="btn btn-outline-secondary btn-sm registry-extension-overview-page__tag"
            href="/extensions?query=tag%3AT1"
            onClick={[Function]}
          >
            T1
          </a>
        </li>
        <li
          className="list-inline-item mb-2"
        >
          <a
            className="btn btn-outline-secondary btn-sm registry-extension-overview-page__tag"
            href="/extensions?query=tag%3AT2"
            onClick={[Function]}
          >
            T2
          </a>
        </li>
      </ul>
    </div>
    <small
      className="text-muted"
    >
      <dl
        className="border-top pt-2"
      >
        <dt
          className="border-top pt-2"
        >
          Extension ID
        </dt>
        <dd>
          x
        </dd>
        <dt
          className="border-top pt-2"
        >
          Resources
        </dt>
        <dd
          className="border-bottom pb-2"
        >
          <a
            className="d-block"
            href="https://example.com"
            rel="nofollow noopener noreferrer"
            target="_blank"
          >
            Source code (JavaScript)
          </a>
          <div
            className="d-flex"
          >
            <GithubIcon
              className="icon-inline mr-1"
            />
            <a
              className="d-block"
              href="https://github.com/foo/bar"
              rel="nofollow noreferrer noopener"
              target="_blank"
            >
              Repository
            </a>
          </div>
        </dd>
      </dl>
    </small>
  </aside>
</div>
`;

exports[`RegistryExtensionOverviewPage renders with no tags 1`] = `
<div
  className="registry-extension-overview-page d-flex flex-wrap"
>
  <div
    className="registry-extension-overview-page__readme mr-3"
  >
    <div
      className="markdown"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p><strong>A</strong></p>
",
        }
      }
      onClick={[Function]}
    />
  </div>
  <aside
    className="registry-extension-overview-page__sidebar"
  >
    <div
      className="mb-3"
    >
      <h3>
        Categories
      </h3>
      <ul
        className="list-inline test-registry-extension-categories"
      >
        <li
          className="list-inline-item mb-2"
        >
          <a
            className="btn btn-outline-secondary btn-sm"
            href="/extensions?query=category%3AOther"
            onClick={[Function]}
          >
            Other
          </a>
        </li>
        <li
          className="list-inline-item mb-2"
        >
          <a
            className="btn btn-outline-secondary btn-sm"
            href="/extensions?query=category%3A%22Programming+languages%22"
            onClick={[Function]}
          >
            Programming languages
          </a>
        </li>
      </ul>
    </div>
    <small
      className="text-muted"
    >
      <dl
        className="border-top pt-2"
      >
        <dt
          className="border-top pt-2"
        >
          Extension ID
        </dt>
        <dd>
          x
        </dd>
        <dt
          className="border-top pt-2"
        >
          Resources
        </dt>
        <dd
          className="border-bottom pb-2"
        >
          <a
            className="d-block"
            href="https://example.com"
            rel="nofollow noopener noreferrer"
            target="_blank"
          >
            Source code (JavaScript)
          </a>
          <div
            className="d-flex"
          >
            <GithubIcon
              className="icon-inline mr-1"
            />
            <a
              className="d-block"
              href="https://github.com/foo/bar"
              rel="nofollow noreferrer noopener"
              target="_blank"
            >
              Repository
            </a>
          </div>
        </dd>
      </dl>
    </small>
  </aside>
</div>
`;
